# Dependabot
[project]
requires-python = ">=3.9"

# PyLint
[tool.pylint.MASTER]
disable = [
	"missing-docstring",
	"relative-beyond-top-level",
]
ignored-modules = [
	"sublime",
	"sublime_plugin",
]
ignore-paths = [
	"sshubl/vendor",
]
jobs = 0
load-plugins = [
	"pylint_secure_coding_standard",
]
py-version = "3.8"

[tool.pylint.DESIGN]
min-public-methods = 0
module-naming-style = "any"

# Ty
[tool.ty.analysis]
allowed-unresolved-imports = ["sublime.**", "sublime_plugin.**"]

[tool.ty.environment]
python-version = "3.8"

[tool.ty.src]
exclude = [
	"sshubl/vendor",
]

## Disable inconsistent MRO rule for Sublime commands (as `sublime_plugin.*InputHandler` bases are missing).
[[tool.ty.overrides]]
include = ["sshubl/commands.py"]
[tool.ty.overrides.rules]
inconsistent-mro = "ignore"

# Ruff
[tool.ruff]
line-length = 100
exclude = [
	"sshubl/vendor",
]
target-version = "py38"
